--- a/app/Resources/views/admin2/default/inspection.html.twig
+++ b/app/Resources/views/admin2/default/inspection.html.twig
@@ -44,7 +44,7 @@
                     <div class="form-group">
                         <label class="col-sm-2 control-label">{{ 'Area'|trans }}</label>
                         <div class="col-sm-10">
-                            <div class="form-control" id="area">{{ uninspectedRequest.city.name }}, {{ user.municipality.name }}</div>
+                            <div class="form-control" id="area">{{ uninspectedRequest.city.name }}, {{ google_map_link(user.municipality.name) }}</div>
                         </div>
                     </div>
                     <div class="form-group">
