Added find match link in results

--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -145,7 +145,7 @@
             </div>
             <div class="col-md-9 presentation">
                 <div class="pull-right">
-                    <a data-href="edit_profile_link" class="btn btn-danger edit-current-profile">Edit Profile</a>&nbsp;<a data-href="mark_pending_link" class="btn btn-warning connection-requestion-mark-pending"><span data-content="mark_pending_label"></span></a>
+                    <a data-href="edit_profile_link" class="btn btn-danger edit-current-profile">Edit Profile</a>&nbsp;<a data-href="mark_pending_link" class="btn btn-warning connection-requestion-mark-pending"><span data-content="mark_pending_label"></span></a>&nbsp;<a data-href="find_match_link" class="btn btn-danger">Find match</a>
                 </div>
                 <h4><span data-content="user_info"></span> (<span data-content="matches" data-format="SpanDelimiter"></span>)</h4>
                 <p class="interests">Matching interests: <span data-content="interests"></span></p>
