Fixed delete connection button in edit profile popup

--- a/app/Resources/views/admin2/default/inspection.html.twig
+++ b/app/Resources/views/admin2/default/inspection.html.twig
@@ -87,6 +87,17 @@
                     }
                 });
             });
+
+            $('body').on('click', '.btn-delete-request', function(e){
+                e.preventDefault();
+                var $this = $(this);
+                $.get($this.data('url'), function (resp){
+                    if (resp.success) {
+                        $('#userEditModal').modal('hide');
+                        window.location.reload();
+                    }
+                });
+            });
         });
     </script>
 {% endblock %}
