Added user internal comments in match results

--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -150,6 +150,11 @@
                 <h4><span data-content="user_info"></span> (<span data-content="matches" data-format="SpanDelimiter"></span>)</h4>
                 <p class="interests">Matching interests: <span data-content="interests"></span></p>
                 <p data-content="about"></p>
+                <p class="interests">Internal Comment</p>
+                <p>
+                    <strong>Internal Comment</strong><br />
+                    <span class="internal_comments"></span>
+                </p>
             </div>
             <div class="col-md-2 choice">
                 <p><strong>Choose candidate</strong></p>
