Fixed query for region statistics

--- a/app/Resources/views/admin2/default/index.html.twig
+++ b/app/Resources/views/admin2/default/index.html.twig
@@ -4,7 +4,7 @@
     <div class="row" style="margin-top: 40px;">
         <div class="col-md-12">
             <p>Fika friend: <strong class="learners-num">0 new</strong> &amp; <strong class="fika-established-num">0 established</strong></p>
-            <p>Music friend: <strong class="learners-num">0 new</strong> &amp; <strong class="music-established-num">0 established</strong></p>
+            <p>Music friend: <strong class="speakers-num">0 new</strong> &amp; <strong class="music-established-num">0 established</strong></p>
         </div>
     </div>
     <div class="row" style="margin-top: 40px;">
@@ -115,6 +115,7 @@
                 $.get(Routing.generate('ajax_by_city', {id: id, page: page}), function (resp) {
                     if (resp.success) {
                         $('.learners-num').html(resp.newUsers+' new');
+                        $('.speakers-num').html(resp.newMusicFriendUsers+' new');
                         $('.fika-established-num').html(resp.establishedUsers+' established');
                         $('.music-established-num').html(resp.establishedMusicFriendUsers+' established');
                         if (resp.next) {
