Fixed internal comments placeholder

--- a/app/Resources/views/admin2/match/find.html.twig
+++ b/app/Resources/views/admin2/match/find.html.twig
@@ -162,7 +162,7 @@
                 <p data-content="about"></p>
                 <p>
                     <strong>Internal Comment</strong><br />
-                    <span class="internal_comments"></span>
+                    <span data-content="internal_comments"></span>
                 </p>
             </div>
             <div class="col-md-2 choice">
