--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -20,8 +20,12 @@
                     <strong>Ge ett bidrag på valfri summa: BG 386-3982</strong>
                 </p>
                 <p> 
-                    Du får också gärna maila <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a> 
-                    så berättar vi mer om hur du kan stötta vår verksamhet.
+                    Vi vill gärna ge dig ett personligt gåvobevis. Maila till kontakt@kompisbyran.se, så mailar vi ditt gåvobevis. 
+                    Stort tack för att du vill vara med och göra skillnad.
+                </p>
+                <p>
+                    Vi berättar gärna mer om hur du kan stötta Kompisbyrån. Maila <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a> 
+                    så berättar vi gärna mer!
                 </p>
 
                 <h3>Tack till...</h3>
@@ -40,11 +44,19 @@
                     Mattizon Armgard, programsekreterare för Abrahams Barn.
                 </p>
                 <p>
+                    <a
+                        href="http://www.lernia.se/kompisbyran/)"
+                        target="_blank"
+                    >Lernia</a> som stöttar Kompisbyråns arbete med att göra det enklare för människor med liknande intressen att 
+                    mötas och träffa nya vänner i vardagen. I och med detta har vi möjlighet att nå ut till fler som 
+                    vill träffa nya kompisar. 
+                </p>    
+                <p>
                     <strong>Övriga samarbeten</strong>
                 </p>    
                 <p>
                     Vi samarbetar med olika språkskolor där vi besöker klasser och berättar mer om oss. 
-                    Jobbar du på SFI eller motsvarande och vill samarbeta? Kontakta oss så bokar vi in en tid.  
+                    Jobbar du på SFI eller motsvarande och vill samarbeta? Kontakta oss så berättar vi mer.  
                 </p>
 
             </div>
