--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -32,19 +32,35 @@
                              Emma Hammar, grundare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
                             Cecilia Holmgren, grundare
                             <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a><br>
-                            Mikael Öhrén, verksamhetsutvecklare <br>
-                            Jon Gotlin, medarbetare<br>
-                            Noa Bachner, medarbetare <br>
-                            Gabriella Hernqvist, medarbetare <br>
-                            Stella Hernström, medarbetare<br>
-                            Louise Koelman, medarbetare<br>
-                            Jennifer Silander, medarbetare<br>
-                             Stina Wäppling, medarbetare
+                            Eva Ramström, Kompisledare Västerås<br>
+                            Gabriella Hernqvist, Jönköping, Linköping, Umeå och Uppsala<br>
+                            Helena Rewucha, Kompisledare Göteborg<br>
+                            Helena Wannberg, Kompisledare Örebro<br>
+                            Isis Pinon, Kompisledare Malmö<br>
+                            Jennifer Silander, Stockholm<br>
+                            Jens Östgaard, Kompisledare Göteborg<br>
+                            Jon Gotlin, IT<br>
+                            Jonas Ouadih, Kompisledare Malmö<br>
+                            Louise Koelman, Stockholm<br>
+                            Maria Jäder, Kompisledare Västerås<br>
+                            Mikael Öhrén, Stockholm<br>
+                            Sofia Winroth, Kompisledare Örebro<br>
+                            Stella Hernström, Stockholm
                         </p>
                     </div>
                     <div class="well br-white border-orange black">
                         <p>
-                            Frågor om matchningen? Maila <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a>
+                            Frågor om matchningen? Maila den stad som du vill träffas i:<br>
+                            Göteborg: <a href="mailto:goteborg@kompisbyran.se">goteborg@kompisbyran.se</a><br>
+                            Jönköping: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br> 
+                            Linköping: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
+                            Malmö: <a href="mailto:malmo@kompisbyran.se">malmo@kompisbyran.se</a><br>
+                            Stockholm: <a href="mailto:stockholm@kompisbyran.se">stockholm@kompisbyran.se</a><br>
+                            Umeå: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
+                            Uppsala: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
+                            Västerås: <a href="mailto:vasteras@kompisbyran.se">vasteras@kompisbyran.se</a><br>
+                            Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
+                            Frågor om samarbete, rekrytering, press eller övrigt? Kontakta Emma eller Cecilia. 
                         </p>
                     </div>
                 </div>
