--- a/app/Resources/views/static/howItWorks.html.twig
+++ b/app/Resources/views/static/howItWorks.html.twig
@@ -28,17 +28,22 @@
                     3. Du mailar din fikakompis och bestämmer vilken dag, tid och plats ni ska träffas. Vi rekommenderar att ni 
                     träffas i ungefär 1 timme på ett kafé. 
                 </p>
+                <p>
+                    En kompisfika med samma person sker en gång. Gillar ni varandra får ni gärna träffas igen själva. Vill du 
+                    träffa en ny person, loggar du in med din e-mail och ditt lösenord, och gör en ny förfrågan.
+                </p>
             </div>
             <div class="col-md-4 col-sm-4">
                 <div class="well br-white border-orange black">
                     <p>
-                         En kompisfika sker en gång. Gillar ni varandra får ni gärna träffas igen själva. 
-                         Vill du träffa nya kompisar, loggar du in och anmäler dig igen.
+                         En kompisfika med samma person sker en gång, om ni inte kommer överens om att ses igen. 
+                         Vill du träffa en ny person, loggar du in och gör en ny förfrågan. 
                     </p>
                 </div>
                 <div class="well br-white border-orange black">
                     <p>
-                        Observera att ni bör träffas och fika i centrala delen av staden (om ni inte kommer överens om annat).
+                        Alla deltagare ska kunna träffas i centrala delen av någon av följande städer: Göteborg, Jönköping, 
+                        Linköping, Malmö, Stockholm, Umeå, Uppsala, Västerås eller Örebro (om ni inte kommer överens om annat).
                     </p>
                 </div>
             </div>
