--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -35,7 +35,7 @@
                 </p>
                 <p>
                     <strong>Sigtunastiftelsen</strong> som 2015 belönade Kompisbyrån med <a
-                        href="http://www.sigtunastiftelsen.se/kompisbyran-far-abrahams-barns-pris-2015/)"
+                        href="http://www.sigtunastiftelsen.se/kompisbyran-far-abrahams-barns-pris-2015/"
                         target="_blank"
                     >Abrahams Barns pris</a>, med motiveringen att Kompisbyrån skapar förutsättningar 
                     för mötesplatser i vardagen där ett kulturellt utbyte kan ske mellan personer som
