--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -100,7 +100,9 @@
                                     <li><a href="{{ path('admin_start') }}">Fikakompisar att matcha</a></li>
                                     <li><a href="{{ path('admin_start', {'type': 'musicfriend'}) }}">Musikkompisar att matcha</a></li>
                                     <li><a href="{{ path('admin_start2') }}">Admin 2.0</a></li>
-                                    <li><a href="{{ path('admin_user_priviledges') }}">User Priviledges</a></li>
+                                    {% if is_granted('ROLE_SUPER_ADMIN') %}
+                                        <li><a href="{{ path('admin_user_priviledges') }}">User Priviledges</a></li>
+                                    {% endif %}
                                     <li><a href="{{ path('admin_connections') }}">Matchade kompisar</a></li>
                                     <li><a href="{{ path('admin_users') }}">Användare</a></li>
                                     <li><a href="{{ path('admin_statistics') }}">Statistik</a></li>
