--- a/app/Resources/views/static/about.html.twig
+++ b/app/Resources/views/static/about.html.twig
@@ -32,25 +32,24 @@
                              Emma Hammar, grundare <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a><br>
                             Cecilia Holmgren, grundare
                             <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a><br>
-                            Eva Ramström, Kompisledare Västerås<br>
-                            Gabriella Hernqvist, Jönköping, Linköping, Umeå och Uppsala<br>
+                            Clara Wäppling, ambassadör matchning<br>
+                            Gabriella Hernqvist, ambassadör matchning<br>
+                            Hanna Magnusson, ambassadör matchning<br>
                             Helena Rewucha, Kompisledare Göteborg<br>
                             Helena Wannberg, Kompisledare Örebro<br>
+                            Heydar Sheykhali, ambassadör matchning<br>
                             Isis Pinon, Kompisledare Malmö<br>
-                            Jennifer Silander, Stockholm<br>
+                            Jennifer Silander, ambassadör matchning<br>
                             Jens Östgaard, Kompisledare Göteborg<br>
                             Jon Gotlin, IT<br>
                             Jonas Ouadih, Kompisledare Malmö<br>
-                            Louise Koelman, Stockholm<br>
-                            Maria Jäder, Kompisledare Västerås<br>
-                            Mikael Öhrén, Stockholm<br>
-                            Sofia Winroth, Kompisledare Örebro<br>
-                            Stella Hernström, Stockholm
+                            Louise Koelman, Kompisledare Stockholm<br>
+                            Sofia Winroth, Kompisledare Örebro
                         </p>
                     </div>
                     <div class="well br-white border-orange black">
                         <p>
-                            Frågor om matchningen? Maila den stad som du vill träffas i:<br>
+                            Frågor om matchningen?<br>
                             Göteborg: <a href="mailto:goteborg@kompisbyran.se">goteborg@kompisbyran.se</a><br>
                             Jönköping: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br> 
                             Linköping: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
@@ -60,7 +59,10 @@
                             Uppsala: <a href="mailto:matchning@kompisbyran.se">matchning@kompisbyran.se</a><br>
                             Västerås: <a href="mailto:vasteras@kompisbyran.se">vasteras@kompisbyran.se</a><br>
                             Örebro: <a href="mailto:orebro@kompisbyran.se">orebro@kompisbyran.se</a><br>
-                            Frågor om samarbete, rekrytering, press eller övrigt? Kontakta Emma eller Cecilia. 
+                    
+                            Övrigt: <a href="mailto:kontakt@kompisbyran.se">kontakt@kompisbyran.se</a><br>
+
+                            Frågor om samarbete, rekrytering eller press: kontakta <a href="mailto:emma@kompisbyran.se">emma@kompisbyran.se </a> eller <a href="mailto:cecilia@kompisbyran.se ">cecilia@kompisbyran.se </a>
                         </p>
                     </div>
                 </div>
