--- a/app/Resources/views/static/workWithUs.html.twig
+++ b/app/Resources/views/static/workWithUs.html.twig
@@ -17,7 +17,10 @@
                     öppnare samhälle där alla kan känna sig delaktiga och välkomna. 
                 </p>
                 <p> 
-                    <strong>Ge ett bidrag på valfri summa: BG 386-3982</strong>
+                    <strong>Din gåva hjälper oss att länka samman fler nya fikakompisar, ge ditt bidrag på valfritt belopp:</strong>
+                </p>
+                <p> 
+                    <strong>Kompisbyråns Swishnr: 1236 809 602 eller BG-konto 386-3982</strong>
                 </p>
                 <p> 
                     Vi vill gärna ge dig ett personligt gåvobevis. Maila till kontakt@kompisbyran.se, så mailar vi ditt gåvobevis. 
@@ -55,8 +58,7 @@
                     <strong>Övriga samarbeten</strong>
                 </p>    
                 <p>
-                    Vi samarbetar med olika språkskolor där vi besöker klasser och berättar mer om oss. 
-                    Jobbar du på SFI eller motsvarande och vill samarbeta? Kontakta oss så berättar vi mer.  
+                    Vi samarbetar med olika språkskolor där vi besöker klasser och berättar mer om oss.  
                 </p>
 
             </div>
